# Segrate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Segrate.sln
Engine/: CMakeLists.txt
Engine/src/: Logger.cpp  Logger.h  Segrate.h  SegrateCore.h  VulkanInit.cpp  VulkanInit.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
Segrate/: Segrate.vcxproj  Segrate.vcxproj.filters
Segrate/common/: OperatingSystems.h
